--- a/portfolio.html
+++ b/portfolio.html
@@ -2,5 +2,48 @@
 <html>
     <head>
         <title>Corgi Computer Corner</title>
+        <link rel = "icon" href = "images/logo.png" type = "image/icon type">
+
+        <meta charset="utf-8">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Fredoka">
+        <style>
+          h1 {
+            font-family: 'Fredoka', serif;
+            font-size: 40px;
+            font-weight: bold;
+            color: white;
+          }
+
+          p{
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 20px;
+            color: white;
+          }
+        </style>
+        
     </head>
+
+    <body  style = "background-color: #3d7da8;">
+        <div>
+            <center><image id = "header" src = "images/banner.png" style = "width: 50vw;"></image></center>
+        </div>
+
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+
+
+        <div id = "welcome">
+            <h1>Welcome!</h1>
+            <p>I am <b>Peanut Butter</b> and I'm here to take you along my journery of understanding what my human does at their computer. They're currently away right now but let's check out what they've been up to.</p>
+        </div>
+        <div id = "projects" style="background-color: white;">
+            <h1 style = "color: #3d7da8;">Projects</h1>
+        </div>
+    </body>
+
 </html>
