--- a/final.html
+++ b/final.html
@@ -135,7 +135,7 @@
                     <div class = "card">
                         <center><a href = "https://sleepybutterfly623.github.io/mokban-resdesign/mokban.html" target="_blank" rel="noopener noreferrer">
                                 <image class = "project-img" src = "image-library/responsive-redesign.png"></image></a></center>
-                                <a href = "" target="_blank" rel="noopener noreferrer"><h2 class = "card-title">Responsive Redesign</h2></a>
+                                <a href = "https://sleepybutterfly623.github.io/mokban-resdesign/mokban.html" target="_blank" rel="noopener noreferrer"><h2 class = "card-title">Responsive Redesign</h2></a>
                             <p class = "card-text">Applied the following criterias to redesign a simple website:
                             </p>
                             <p class = "card-text">1) Usability</p>
