--- a/final.html
+++ b/final.html
@@ -70,7 +70,7 @@
         <div id = "projects">
             <div class = "row">
                 <div class = "column">
-                    <h1 class = "left-title" style = "margin-left: 100px;">My Projects</h1>
+                    <h1 class = "left-title" style = "margin-left: 90px;">My Projects!</h1>
                     <p class = "left-text" style = "margin-left: 100px;">Here are some of the projects that I completed as a student and my learnings as I explored 
                         UI/UX.</p>
                 </div>
