--- a/final.html
+++ b/final.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="column">
-                    <a href = "https://sleepybutterfly623.github.io/mokban-resdesign/mokban.html" target="_blank" rel="noopener noreferrer">
+                    <a href = "https://sleepybutterfly623.github.io/redesigned/submission.html" target="_blank" rel="noopener noreferrer">
                         <image class = "proj-img" src = "image-library/responsive.png"></image></a>
                     <p style = "width: 550px;">Redesigned an active website to be more user-friendly, accessible, and responsive to user needs.</p>
                 </div>
@@ -116,14 +116,15 @@
                     <center><image src = "image-library/books.PNG"></image></center>
                 </div>
                 
-                <div class="column">
+                <center><div class="column">
                     <h1 class = "right-title">About Me!</h1>
                     <p class = "welcome-paragraph">I'm a student at Brown University currently studying Computer Science with 
                         interests in Artificial Intelligence and Design. Outside of Computer Science, I'm interested in Cognitive Processes,
-                    Social Psychology, and Entrepreneurship.</p>
+                    Social Psychology, and Entrepreneurship. I'm looking to pursue UI/UX and open to exploring other opportunties to make technology
+                 accessible for all.</p>
 
                     <p class = "welcome-paragraph">Beyond the classroom, you can find me crocheting, drinking tea, or taking long walks.</p>
-                </div>
+                </div></center>
             </div>
         </div>
     </body>
